--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node app.js"
   },
   "engines": {
-     "node": "10.15.2"
+     "node": "10.15.2",
+     "npm": "6.13.7"
    },
   "dependencies": {
     "bcrypt": "^3.0.6",
