--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-redirect": "^1.2.2",
+    "mongoose": "^5.5.2",
     "init": "^0.1.2",
     "nodemailer": "^6.2.1",
     "nodemon": "^2.0.2",
